[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Save Game Pick Screen/Save Game Pick Screen Item.gd" type="Script" id=1]
[ext_resource path="res://Assets/Miscellaneous/Theme.tres" type="Theme" id=2]

[node name="Save Button" type="Button"]
margin_right = 400.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 190.0
rect_min_size = Vector2( 380, 180 )
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 382.0
margin_bottom = 186.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 188.0
margin_bottom = 186.0
rect_min_size = Vector2( 188, 0 )
mouse_filter = 2
custom_constants/separation = 20
alignment = 1

[node name="SaveSlot" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 188.0
margin_bottom = 83.0
mouse_filter = 2
fit_content_height = true

[node name="HasSave" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 188.0
margin_bottom = 124.0
mouse_filter = 2
fit_content_height = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 382.0
margin_bottom = 186.0
rect_min_size = Vector2( 188, 0 )
mouse_filter = 2
custom_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 190.0
margin_bottom = 21.0

[node name="ClassName" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 93.0
margin_bottom = 21.0
rect_min_size = Vector2( 93, 0 )
mouse_filter = 2
text = "Class name"
fit_content_height = true

[node name="ClassNameText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 97.0
margin_right = 190.0
margin_bottom = 21.0
rect_min_size = Vector2( 93, 0 )
mouse_filter = 2
fit_content_height = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 41.0
margin_right = 190.0
margin_bottom = 83.0

[node name="DungeonLevel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 93.0
margin_bottom = 42.0
rect_min_size = Vector2( 93, 0 )
mouse_filter = 2
text = "Dungeon level"
fit_content_height = true

[node name="DungeonLevelText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 97.0
margin_right = 190.0
margin_bottom = 42.0
rect_min_size = Vector2( 93, 0 )
mouse_filter = 2
fit_content_height = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 103.0
margin_right = 190.0
margin_bottom = 145.0

[node name="DungeonLevelName" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer3"]
margin_right = 93.0
margin_bottom = 42.0
rect_min_size = Vector2( 93, 0 )
mouse_filter = 2
text = "Dungeon level name"
fit_content_height = true

[node name="DungeonLevelNameText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer3"]
margin_left = 97.0
margin_right = 190.0
margin_bottom = 42.0
rect_min_size = Vector2( 93, 0 )
mouse_filter = 2
fit_content_height = true

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 165.0
margin_right = 190.0
margin_bottom = 186.0

[node name="Points" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer4"]
margin_right = 93.0
margin_bottom = 21.0
rect_min_size = Vector2( 93, 0 )
mouse_filter = 2
text = "Points"
fit_content_height = true

[node name="PointsText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer4"]
margin_left = 97.0
margin_right = 190.0
margin_bottom = 21.0
rect_min_size = Vector2( 93, 0 )
mouse_filter = 2
fit_content_height = true

[connection signal="pressed" from="." to="." method="_on_Save_Button_pressed"]
